# textdistance

./: .drone.star  .gitignore  .markdownlint.yaml  .travis.yml  LICENSE  MANIFEST.in  README.md  README.rst  README_old.md  Taskfile.yml  constraints.txt  deploy.sh  pyproject.toml  requirements-flake.txt  run_tests.py  setup.cfg  setup.py  tests.py  textdistance.py  tox.ini
.github/workflows/: cifuzz.yml  main.yml
fuzzing/: build.sh  fuzz_helpers.py  textdistance_fuzzer.py
licenses_example/: README.md  compare.py  make_heatmap.ipynb  requirements.txt
tests/: __init__.py  common.py  compression_based.py  edit_based.py  external.py  phonetic.py  sequence_based.py  test_common.py  test_external.py  token_based.py
tests/test_compression/: test_arith_ncd.py  test_bwtrle_ncd.py  test_bz2_ncd.py  test_common.py  test_entropy_ncd.py  test_sqrt_ncd.py
tests/test_compression_based/: test_bwtrle_ncd.py  test_bz2_ncd.py  test_common.py  test_sqrt_ncd.py
tests/test_edit/: test_damerau_levenshtein.py  test_editex.py  test_gotoh.py  test_hamming.py  test_jaro.py  test_jaro_winkler.py  test_levenshtein.py  test_matrix.py  test_mlipns.py  test_needleman_wunsch.py  test_smith_waterman.py  test_strcmp95.py
tests/test_phonetic/: test_editex.py
tests/test_sequence/: test_lcsseq.py  test_lcsstr.py
tests/test_token/: test_bag.py  test_cosine.py  test_jaccard.py  test_monge_elkan.py  test_overlap.py  (+1 more)
textdistance/: __init__.py  algorithms.py  benchmark.py  constants.py  helpers.py  interfaces.py  internal.py  labraries.py  libraries.json  libraries.py  py2.py  py3.py  utils.py
(+13 files in other folders)
