[metadata]
description_file = README.md
license_files = LICENSE

[flake8]
max-line-length=120
ignore=P101,P103,E241,B023
exclude=
    .tox
    .pytest_cache
    .venvs/
    build

[isort]
skip=.tox,.pytest_cache,.venvs,build
line_length=120
combine_as_imports=true
balanced_wrapping=true
lines_after_imports=2
not_skip=__init__.py
multi_line_output=5
import_heading_stdlib=built-in
import_heading_thirdparty=external
import_heading_firstparty=project
import_heading_localfolder=app

[tool:pytest]
addopts = --strict-markers
markers =
    external: tests that require external libs to run
